--- a/app/scss/components/modules/content-filter-list-headers.scss
+++ b/app/scss/components/modules/content-filter-list-headers.scss
@@ -22,7 +22,7 @@
     }
 
     &.selectable:hover {
-        background: lighten($blue, 20%);
+        background: $color-detail-50;
     }
 
     &.quick:hover,
@@ -36,8 +36,7 @@
 
     &.active,
     &.active:hover {
-        background: $blue;
-        color: $white;
+        background: $color-detail-50;
 
         .select > button {
             background: none;
@@ -71,10 +70,10 @@
     > div .select > button {
         background: none;
         border: $light-gray 2px solid;
-        padding: (.5em / 2) .5em;
+        padding: .25em .5em .25em .7em;
 
         span {
-            color: $blue;
+            color: $color-detail-70;
         }
     }
 
