--- a/app/scss/components/input.scss
+++ b/app/scss/components/input.scss
@@ -2,5 +2,5 @@ input[type="text"],
 input[type="email"],
 input[type="password"] {
     background-color: $white;
-    color: $dark-gray;
+    color: $color-neutral-60;
 }
