--- a/app/scss/components/modules/editor/variable-blocks.scss
+++ b/app/scss/components/modules/editor/variable-blocks.scss
@@ -30,7 +30,7 @@
             > ul {
                 float: left;
                 font-size: 0.9em;
-                background-color: $light-gray;
+                background-color: $color-neutral-20;
                 width: inherit;
 
                 padding: 0.6em;
