--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -53,9 +53,7 @@
 
 	// finally enhance the components with some theme magic
 	'theme/styles',
-	'theme/responsive',
-	'theme/fancify',
-	'theme/animate',
+	//'theme/responsive',
 //  <-- OLD STYLES THAT NEED TO BE GONE
 
 'shared-components/top-filter',
