--- a/app/scss/shared-components/_buttons.scss
+++ b/app/scss/shared-components/_buttons.scss
@@ -8,7 +8,7 @@ input::-moz-focus-inner {
 
 %button {
     -webkit-font-smoothing: antialiased;
-    background-color: $light-gray;
+    background-color: $color-neutral-20;
     border-radius: 1px solid $border-radius-10;
     color: $white;
     display: inline-block;
