--- a/app/scss/components/modules/editor/editor-layout.scss
+++ b/app/scss/components/modules/editor/editor-layout.scss
@@ -5,6 +5,7 @@ div.editor-content {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    @include transition(margin-right ease-in $sidebar-toggle-speed);
 
     > div {
         overflow: hidden;
