--- a/app/scss/components/modules/tooltip.scss
+++ b/app/scss/components/modules/tooltip.scss
@@ -2,7 +2,7 @@
     font-family: $font-family-body;
     left: 0;
     font-size: .7em;
-    background: $dark-gray;
+    background: $color-neutral-60;
     color: $white;
     border-radius: .3em;
     padding: 0 .5em;
@@ -10,6 +10,6 @@
     cursor: default;
 
     &.left {
-        @include css-triangle(.3em, 0, $dark-gray, right, $dark-gray, absolute);
+        @include css-triangle(.3em, 0, $color-neutral-60, right, $color-neutral-60, absolute);
     }
 }
