--- a/app/scss/core/_base.scss
+++ b/app/scss/core/_base.scss
@@ -98,7 +98,7 @@ del { text-decoration: line-through; }
 mark { background-color: lighten(yellow, 35%); }
 
 hr {
-    border-bottom: 1px solid $light-gray;
+    border-bottom: 1px solid $color-neutral-20;
     border-left: 0;
     border-right: 0;
     border-top: 0;
@@ -111,7 +111,7 @@ hr {
 }
 
 blockquote {
-    border-left: 2px solid 1px solid $light-gray;
+    border-left: 2px solid 1px solid $color-neutral-20;
     color: lighten($color-neutral-70, 15);
     margin: $spacing 0;
     padding-left: $spacing / 2;
