--- a/app/scss/shared-components/_forms.scss
+++ b/app/scss/shared-components/_forms.scss
@@ -1,102 +1,105 @@
 // =========== Forms
 
 input[type=search] { @include appearance(none); }
+input::-ms-clear { display:none; }
+
+
+select[disabled] {
+    font-weight: 400;
+    color: $color-neutral-40;
+}
 
 #{$all-text-inputs},
 textarea,
 select {
-    box-sizing: border-box;
     @include transition(border-color);
+    @include appearance(none);
     background-color: $white;
+    border: 1px solid $color-neutral-30;
     border-radius: $border-radius-10;
-    border: 1px solid $light-gray;
-    box-shadow: inset 0 1px 3px rgba(#000, .06);
-    font-family: $font-family-body;
-    font-size: 1rem;
-    margin-bottom: $spacing / 2;
-    padding: $spacing / 3;
-    width: 100%;
+    box-shadow: inset 0px 1px 3px $color-neutral-10;
+    color: $color-neutral-60;
     display: block;
-
-
-    &:hover {
-        border-color: darken($light-gray, 10);
-    }
+    font-family: $font-family-body;
+    font-size: $font-size-30;
+    line-height: 1.5em;
+    margin: 0;
+    padding: 0.5em;
+    vertical-align: baseline;
+    width: 100%;
 
     &:focus {
-        border-color: $blue;
+        color: $color-neutral-70;
+        border-color: $color-brand-50;
         box-shadow: inset 0 1px 3px rgba(#000, .06), 0 0 5px rgba(darken($blue, 5), .7);
-        outline: none;
+        outline: 0;
     }
 
-    // -webkit-appearance: none;
-    // -moz-appearance: none;
-    // appearance: none;
-    // border: 1px solid $color-neutral-50;
-    // border-radius: $border-radius-10;
-    // color: inherit;
-    // display: block;
-    // font-family: $font-family-body;
-    // font-size: $font-size-30;
-    // line-height: 1.5em;
-    // margin: 0;
-    // padding: 0.5rem;
-    // vertical-align: baseline;
-    // width: 100%;
+    &:disabled {
+        box-shadow: none;
+        background: $color-neutral-10;
+        color: $color-neutral-40;
+    }
 
-    // &:focus {
-    //     border: 1px solid $color-neutral-50;
-    //     box-shadow: 0px 0px 3px rgba($black, 0.2);
-    //     outline: 0;
-    // }
+    @include placeholder {
+        font-weight: 400;
+        color: $color-neutral-40;
+    }
 }
 
-input[type='checkbox'],
-input[type='radio'] {// bestaat niet in taiga
+select::-ms-expand {
+    display: none;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    @include appearance(none);
+    margin: 0; 
+}
+
+input[type=number] {
+    @include appearance(textfield);
+}
+
+input[type=checkbox],
+input[type=radio] {// bestaat niet in taiga
     display: inline;
     margin-right: $spacing / 4;
 }
 
-input[type='file'] {// bestaat niet in taiga
+input[type=file] {// bestaat niet in taiga
     padding-bottom: $spacing / 2;
-    width: 100%;
 }
 
 textarea {
-    display: block;
     overflow: auto;
     resize: vertical;
     vertical-align: top;
+    display: block;
 }
 
 select {
     margin-bottom: $spacing;
     max-width: 100%;
     width: auto;
-
-    // -webkit-appearance: menulist;
-    // height: 2.85rem;
-
-    // &[multiple] {
-    //     -webkit-appearance: none;
-    //     height: auto;
-    // }
 }
 
 form {  }
 
-fieldset { 
-    background: lighten($light-gray, 10);
-    border: 1px solid $light-gray;
+fieldset { // is leeg in taiga 
+    background: lighten($color-neutral-20, 10);
+    border: 1px solid $color-neutral-20;
     margin: 0 0 ($spacing / 2);
     padding: $spacing;
-
-    // leeg in taiga
 }
 
 legend {
     border: 0;
     display: block;
+    margin-bottom: 0.25rem;
+    font-weight: bold;
+    line-height: 1.5rem;
+    font-size: $font-size-50;
 }
 
 label {// bestaat niet in taiga
@@ -114,78 +117,3 @@ label {// bestaat niet in taiga
         display: none;
     }
 }
-
-// ul.form {
-//     list-style: none;
-//     margin: 0 0 $spacing 0;
-
-//     > li { @include grid-container; }
-
-//     > li > label {
-//         clear: left;
-//         cursor: pointer;
-//         display: inline-block;
-//         font-weight: bold;
-//         padding-top: 0.5rem;
-//         text-align: left;
-
-//         @media (min-width: $breakpoint-10) {
-//             @include grid(16, 0, 1);
-//         }
-
-//         &:hover { color: $color-neutral-90; }
-//     }
-
-//     div.form--fields {
-//         margin-bottom: 0.5rem;
-
-//         @media (min-width: $breakpoint-10) {
-//             @include grid(32);
-//         }
-
-//         p, small {
-//             display: block;
-//             margin: 0.25rem 0;
-//         }
-
-//         p.form--description { margin: 0.5rem 0; }
-//     }
-// }
-
-// ul.form--checklist {
-//     list-style: none;
-//     margin: 0.5rem 0;
-
-//     li { margin: 0.5rem 0; }
-
-//     input { margin-right: 0.5rem; }
-
-//     label {
-//         cursor: pointer;
-
-//         &:hover { color: $color-neutral-90; }
-//     }
-// }
-
-// li.form--error {
-
-//     label {
-//         color: $color-alert-50;
-
-//         &:hover { color: $color-alert-60; }
-//     }
-
-//     input,
-//     input:focus {
-//         border: 1px solid $color-alert-50;
-//         box-shadow: 0px 0px 3px $color-alert-50;
-//     }
-
-//     ul.form--errors {
-//         color: $color-alert-50;
-//         list-style: none;
-//         margin: 0.25rem 0;
-
-//         li { font-size: $font-size-20; }
-//     }
-// }
