--- a/app/scss/theme/styles.scss
+++ b/app/scss/theme/styles.scss
@@ -25,6 +25,7 @@ input.ng-invalid {
     border-color: $error-color;
     background-color: lighten($error-color, 45%);
     box-shadow: inset 0 1px 8px lighten($error-color, 30%), 0 0 8px lighten($error-color, 30%);
+    @include transition(all linear .1s);
 }
 
 .error-feedback {
@@ -40,7 +41,7 @@ input.ng-invalid {
     padding: .5em;
     background-color: $notice-color;
     border-radius: 1px solid $border-radius-10;
-    color: $dark-gray;
+    color: $color-neutral-60;
 }
 
 .select {
@@ -77,10 +78,10 @@ button {
     }
 
     &.secondary {
-        background-color: $dark-gray;
+        background-color: $color-neutral-60;
 
         &:hover {
-            background-color: darken($dark-gray, 10%);
+            background-color: darken($color-neutral-60, 10%);
         }
     }
 }
