--- a/app/scss/modules/_navigation.scss
+++ b/app/scss/modules/_navigation.scss
@@ -1,5 +1,4 @@
 div.layout > nav {
-    top: $header-height;
     width: $menu-size;
     background-color: $color-neutral-70;
     position: fixed;
@@ -15,7 +14,6 @@ div.layout > nav {
 
     ul.modules {
         @include display(flex);
-        //padding-top: $spacing/2;
         background-color: $color-neutral-90;
         overflow: hidden;
 
@@ -26,7 +24,6 @@ div.layout > nav {
             @include justify-content(center);
             font-size: $font-size-60;
             margin: 0 0.25rem;
-            // height: $header-height - $spacing/2;
             padding: $spacing/2 0;
             border-radius: $border-radius-20 $border-radius-20 0 0 ;
             position: relative;
@@ -59,10 +56,10 @@ div.layout > nav {
         li {
             //@include row;
             @include ellipsis;
-            padding: 6px 12px;
+            padding: 6px $spacing - .3rem;
             font-size: 1.4rem;
             line-height: 2rem;
-            border-left: .3em solid $color-neutral-70;
+           //border-left: .3rem solid $color-neutral-70;
             position: relative;
 
             &:hover,
@@ -73,11 +70,11 @@ div.layout > nav {
 
             &:hover {
                 cursor: pointer;
-                border-left: .3em solid $color-neutral-50;
+                //border-left: .3em solid $color-neutral-50;
             }
 
             &.active {
-                border-left: .3em solid $color-brand-50;
+                //border-left: .3em solid $color-brand-50;
             }
 
             .badge {
@@ -106,11 +103,20 @@ div.layout > nav {
     }
 
     h1 {
-        font-size: 2.3rem;
+        font-size: 1.7rem;
+        font-weight: 600;
         display: block;
-        padding: 8px 16px;
+        padding: 8px $spacing/2;
         background: darken($color-neutral-60, 5%);
         color: lighten($color-neutral-60, 20%);
+    }
+
+    .title {
+        background: $color-neutral-90;
+        color: $color-neutral-10;
+        font-size: 2rem;
+        padding: $spacing $spacing/2 $spacing*1.5;
+        font-weight: 300;
     }
 }
 
