herstylen van de progress op de running pagina en de select-dropdown weer zichtbaar gemaakt

--- a/app/scss/components/intro.scss
+++ b/app/scss/components/intro.scss
@@ -11,7 +11,7 @@
 
         i {
             margin-right: .25em;
-            color: $blue;
+            color: $color-brand-50;
         }
     }
 
