--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -65,6 +65,8 @@
 'modules/navigation',
 'modules/main',
 
+'modules/radial-progress',
+
 
 // Pattern library (a kind of styleguide)
 'core/pattern-library';
