--- a/app/scss/components/modules/content-list.scss
+++ b/app/scss/components/modules/content-list.scss
@@ -58,7 +58,7 @@
 
             &.selectable:hover {
                 cursor: pointer;
-                background: $color-detail-40;
+                background: $color-brand-30;
                 //color: $white;
 
                 > div.comments {
@@ -113,8 +113,7 @@
             }
 
             > i,
-            > div.title > i,
-            > div.title > .radial-progress {
+            > div.title > i {
                 //position: absolute;
                 width: 2rem;
                 text-align: center;
@@ -161,23 +160,6 @@
         margin: 0 .5em / 2;
     }
 
-    > li.cl > div.active,
-    > li.cl > div.selectable:hover,
-    > li.cl > ul li.cl > div.active,
-    > li.cl > ul li.cl > div.selectable:hover,
-    > li.cl > ul li.cl > ul li.cl > div.active,
-    > li.cl > ul li.cl > ul li.cl > div.selectable:hover {
-        > div.title > .radial-progress {
-            .circle .mask .fill {
-                background: $white;
-            }
-
-            .inset {
-                background: $color-detail-50;
-            }
-        }
-    }
-
     > li.cl {
         border-top: lighten(lighten($gray, 10%), 20%) 2px solid;
         background: lighten(lighten($gray, 10%), 20%);
@@ -188,30 +170,25 @@
             margin-top: 0;
 
             &.selectable:hover {
-                background: $color-detail-40;
+                background: $color-brand-30;
 
                 > div.comments {
-                    background: $color-detail-40;
+                    background: $color-brand-30;
                 }
             }
 
             &.active,
             &.active:hover {
-                background: $color-detail-50;
+                background: $color-brand-50;
 
                 > div.comments {
-                    background: $color-detail-50;
+                    background: $color-brand-50;
                 }
             }
 
-            button,
-            .select > button {
+            button {
                 font-size: 1.333rem - .1;
                 margin-top: .3em;
-            }
-
-            .select > button {
-                margin-top: .2em;
             }
 
             > div > span,
@@ -224,8 +201,7 @@
                 }
             }
 
-            > div.title > i,
-            > div.title > .radial-progress {
+            > div.title > i {
                 cursor: pointer;
                 left: 0.53333em * 1.25;
                 top: .4em;
@@ -233,19 +209,6 @@
 
             > div.title > i {
                 font-size: 1.778em;
-            }
-
-            > div.title > .radial-progress {
-                @include radial-progress(1em, .65em, darken(lighten(lighten($gray, 10%), 5%), 8%), $white, lighten(lighten($gray, 10%), 5%));
-                font-size: 1.75em;
-
-                .inset[data-highlight="failed"] {
-                    background: $light-red;
-                }
-
-                .inset[data-highlight="success"] {
-                    background: $lime;
-                }
             }
 
             > div.title > span,
@@ -269,10 +232,10 @@
                 }
 
                 > a {
-                    color: $blue;
+                    color: $color-brand-50;
 
                     &:hover {
-                        color: darken($blue, 10%);
+                        color: $color-brand-60;
                     }
                 }
 
@@ -300,12 +263,12 @@
                     background: lighten(lighten($gray, 10%), 15%);
 
                     &.selectable:hover {
-                        background: $color-detail-40;
+                        background: $color-brand-30;
                     }
 
                     &.active,
                     &.active:hover {
-                        background: $color-detail-50;
+                        background: $color-brand-50;
                     }
 
                     &.selectable:hover,
@@ -322,15 +285,10 @@
                         }
                     }
 
-                    > div > button,
-                    .select > button {
+                    > div > button {
                         font-size: 1.2rem - .1;
-                        //margin-top: .27em;
                     }
 
-                    .select > button {
-                        margin: .15em 0;
-                    }
 
                     > div > span {
                         margin: 0 .5em / 2;
@@ -338,14 +296,12 @@
 
                     > div.title {
 
-                        > i,
-                        > .radial-progress {
+                        > i {
                             left: 0.53333em * 1.75;
                         }
 
                         &.editable {
-                            > i,
-                            > .radial-progress {
+                            > i {
                                 left: -0.6026629em * 1.75;
                             }
 
@@ -353,10 +309,6 @@
                                 padding-right: .5em * 2;
                             }
                         }
-                    }
-
-                    > div.title > .radial-progress {
-                        top: .4em;
                     }
 
                     > div.title > i {
@@ -401,19 +353,6 @@
                         margin-left: -.3em;
                         opacity: 0;
                     }
-
-                    > div.title > .radial-progress {
-                        @include radial-progress(1em, .75em, darken(lighten(lighten($gray, 10%), 15%), 8%), $white, lighten(lighten($gray, 10%), 15%));
-                        font-size: 1.5em;
-
-                        .inset[data-highlight="failed"] {
-                            background: $light-red;
-                        }
-
-                        .inset[data-highlight="success"] {
-                            background: $lime;
-                        }
-                    }
                 }
 
                 > ul {
@@ -428,18 +367,10 @@
 
                         &.success {
                             background: lighten($lime, 30%);
-
-                            > div.title .radial-progress .circle .mask .fill {
-                                background: lighten($lime, 10%);
-                            }
                         }
 
                         &.failed {
                             background: lighten($light-red, 30%);
-
-                            > div.title .radial-progress .circle .mask .fill {
-                                background: lighten($light-red, 10%);
-                            }
                         }
 
                         &.skipped:not(.active) {
@@ -450,30 +381,21 @@
                         }
 
                         &.active {
-                            background: $color-detail-50;
+                            background: $color-brand-50;
                         }
 
                         &.selectable:hover {
-                            background: lighten($blue, 20%);
+                            background: $color-brand-30;
                         }
 
-                        > div > button,
-                        .select > button {
+                        > div > button {
                             margin-top: .20em;
-                        }
-
-                        .select > button {
-                            margin-top: .10em;
                         }
 
                         > div.title > {
 
                             .fa-fw {
                                 left: 0.53333em;
-                            }
-
-                            .radial-progress {
-                                @include radial-progress(1em, 0, lighten($color-neutral-20, 4%), darken($color-neutral-20, 8%));
                             }
                         }
                     }
