--- a/app/scss/components/modules/select.scss
+++ b/app/scss/components/modules/select.scss
@@ -1,30 +1,25 @@
 .select {
     position: relative;
 
-    button span {
-        @include transition(all $animate-std-cubic .3s);
-    }
-
-    .select-dropdown {
-        opacity: 1;
-
-        &.ng-hide {
-            opacity: 0;
-        }
-
-        &.ng-hide-add {
-            @include transition(all linear .1s .1s);
-        }
-    }
-
     > button {
         text-align: left;
         border: $color-neutral-20 2px solid;
         position: relative;
 
-        &.active span {
-            min-width: 10em;
+        background: none;
+        padding: .25em .5em .25em .7em;
+        border: $white 2px solid;
+        border-radius: $border-radius-20;
+        font-size: 1.5rem;
+
+        span {
+            @include transition(all $animate-std-cubic .3s);
+            color: $white;
         }
+
+        &:focus { outline: 0; }
+
+        &.active span { min-width: 10em; }
 
         i {
             position: absolute;
@@ -43,25 +38,53 @@
     }
 
     .select-dropdown {
+        width: 100%;
+        background: $white;
+
+        padding: .4em 0;
+
         position: absolute;
+        left: 0;
+        top: 3.5rem;
+        z-index: 2000;
+
         text-align: left;
         color: lighten($color-neutral-60, 20%);
         font-weight: normal;
-        font-size: 1.1em;
-        left: 0;
-        top: 2.5em / 1.1em + .4em;
-        background: $white;
-        width: 100%;
-        padding: .4em 0;
-        border: lighten($gray, 10%) .1em solid;
-        z-index: 2;
+        font-size: 1rem;
+        box-shadow: 0 1px 4px 0 rgba($color-neutral-60, 0.5);
 
-        &.paginated {
-            padding: 0;
+        border: $color-neutral-30 0.2rem solid;
+        border-radius: .3em;
+        opacity: 1;
+
+        &:after, 
+        &:before {
+            bottom: 100%;
+            left: 20%;
+            border: solid transparent;
+            content: " ";
+            height: 0;
+            width: 0;
+            position: absolute;
+            pointer-events: none;
         }
 
-        li {
+        &:before {
+            border-color: rgba(255, 225, 255, 0);
+            border-bottom-color:  $color-neutral-30;
+            border-width: 0.8rem;
+            margin-left: -1rem;
+        }
 
+
+        &.ng-hide { opacity: 0; }
+
+        &.ng-hide-add { @include transition(all linear .1s .1s); }
+
+        &.paginated { padding: 0; }
+
+        li {
             @include ellipsis;
             border: 0;
             padding: .3em 1em;
@@ -104,9 +127,19 @@
             margin: -.4em 0;
             border-radius: 0;
 
+            &:first-child {
+                border-radius: .2em .2em 0 0;
+            }
+
+            &:last-child {
+                border-radius: 0 0 .2em .2em;
+            }
+
             &:hover {
                 background: darken($white, 10%);
             }
+
+
         }
     }
 }
